--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-install": "^1.1.0",
+    "gulp-jenkins": "^1.0.0",
     "gulp-s3-upload": "^1.6.6",
     "gulp-util": "^3.0.8",
     "gulp-zip": "^4.0.0",
