--- a/app/yml/Sample1.yml
+++ b/app/yml/Sample1.yml
@@ -12,30 +12,30 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: error.html
-##    DeletionPolicy: Retain
- ## BucketPolicy:
- ##   Type: 'AWS::S3::BucketPolicy'
- ##   Properties:
- ##     PolicyDocument:
- ##       Id: !Ref BucketNameParmeter + '-id'
- ##      Version: 2012-10-17
- ##       Statement:
- ##         - Sid: PublicReadForGetBucketObjects
- ##           Effect: Allow
- ##           Principal: '*'
- ##           Action: 's3:GetObject'
- ##           Resource: !Join 
- ##             - ''
- ##             - - 'arn:aws:s3:::'
- ##               - !Ref BucketNameParmeter
- ##               - /*
- ##     Bucket: !Ref BucketNameParmeter    
- ## Outputs:
- ## WebsiteURL:
- ##   Value: !GetAtt 
- ##     - S3Bucket
- ##     - WebsiteURL
- ##   Description: URL for website hosted on S3
+      DeletionPolicy: Retain
+  BucketPolicy:
+    Type: 'AWS::S3::BucketPolicy'
+    Properties:
+      PolicyDocument:
+        Id: !Ref BucketNameParmeter + '-id'
+       Version: 2012-10-17
+        Statement:
+          - Sid: PublicReadForGetBucketObjects
+            Effect: Allow
+            Principal: '*'
+            Action: 's3:GetObject'
+            Resource: !Join 
+              - ''
+              - - 'arn:aws:s3:::'
+                - !Ref BucketNameParmeter
+                - /*
+      Bucket: !Ref BucketNameParmeter    
+  Outputs:
+  WebsiteURL:
+    Value: !GetAtt 
+      - S3Bucket
+      - WebsiteURL
+    Description: URL for website hosted on S3
  ## S3BucketSecureURL:
  ##   Value: !Join 
  ##     - ''
